--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,38 @@
 Package: biodbNcbi
 Title: biodbNcbi, a library for connecting to NCBI Databases.
 Version: 0.99.0
-Authors@R: c(person("Pierrick", "Roger", email = "pierrick.roger@cea.fr", role = c("aut", "cre")))
-Description: The biodbNcbi library provides access to NCBI Databases, using biodb package framework.
-biocViews: Software, Infrastructure, DataImport
-Depends:
-    R (>= 3.6)
+Authors@R: 
+    c(person(given = "Pierrick",
+             family = "Roger",
+             role = c("aut", "cre"),
+             email = "pierrick.roger@cea.fr"))
+Description: The biodbNcbi library is an extension of the biodb framework
+    package, that provides access to NCBI databases CCDS, Gene, Pubchem Comp and
+    Pubchem Subst. It allows to retrieve entries by their accession number, and
+    run specific web services.
 License: AGPL-3
-Encoding: UTF-8
-LazyData: true
+biocViews: Software, Infrastructure, DataImport
 VignetteBuilder: knitr
+Encoding: UTF-8
+Depends:
+    R (>= 4.0)
+Imports: 
+    biodb (>= 1.3.1),
+    R6,
+    stringr,
+    chk
 Suggests:
-	BiocStyle,
-	roxygen2,
-	devtools,
-	testthat (>= 2.0.0),
-	knitr,
-	rmarkdown,
-	biodb
-Imports:
-	methods
-RoxygenNote: 6.1.1
+    roxygen2,
+    BiocStyle,
+    testthat (>= 2.0.0),
+    devtools,
+    knitr,
+    rmarkdown,
+    covr,
+    lgr
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
 Collate:
-    'NcbiConn.R'
     'NcbiCcdsConn.R'
     'NcbiCcdsEntry.R'
     'NcbiEntrezConn.R'
