--- a/inst/definitions.yml
+++ b/inst/definitions.yml
@@ -34,6 +34,7 @@ databases:
 
   ncbi.pubchem.comp:
     entry.content.type: xml
+    compound.db: true
     name: PubChem Compound
     parsing.expr:
       accession: //PC-CompoundType_id_cid
