Generate doc. Pass check. Upgrade maintenance files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,29 @@
-Meta
-doc
-.swp
+..Rcheck
 .*.swp
 .DS_Store
 .RData
 .Rhistory
-..Rcheck
-src/*.rds
-src/*.o
-src/*.so
+.swp
 *.log
+biodbExpasy_*.tar.gz
+biodbExpasy_*.tgz
+biodbExpasy.Rcheck
+biodbNcbi_*.tar.gz
+biodbNcbi_*.tgz
+biodbNcbi.Rcheck
+cache*
+check.Renviron
+doc
+longtests/*/output
+Meta
+Renviron.bioc
 src-i386
 src-x64
-biodbExpasy_*.tgz
-biodbExpasy_*.tar.gz
-biodbExpasy.Rcheck
-cache*
+src/*.o
+src/*.rds
+src/*.so
 tests/*/output
-longtests/*/output
+testthat-problems.rds
+vignettes/*.html
 vignettes/*.md
 vignettes/*.R
-vignettes/*.html
-check.Renviron
-Renviron.bioc
-testthat-problems.rds
