--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,18 +6,19 @@ Authors@R:
              family = "Roger",
              role = c("aut", "cre"),
              email = "pierrick.roger@cea.fr"))
-Description: The biodbNcbi library is an extension of the biodb framework
-    package, that provides access to NCBI databases CCDS, Gene, Pubchem Comp and
-    Pubchem Subst. It allows to retrieve entries by their accession number, and
-    run specific web services.
+Description: The biodbNcbi library provides access to the 
+    NCBI databases CCDS, Gene, Pubchem Comp and
+    Pubchem Subst, using biodb package framework. It allows to retrieve entries by their accession number. Web services can be accessed for searching the database by name or mass.
 License: AGPL-3
+URL: https://github.com/pkrog/biodbNcbi
+BugReports: https://github.com/pkrog/biodbNCbi/issues
 biocViews: Software, Infrastructure, DataImport
 VignetteBuilder: knitr
 Encoding: UTF-8
 Depends:
-    R (>= 4.0)
+    R (>= 4.1)
 Imports: 
-    biodb (>= 1.3.1),
+    biodb (>= 1.3.2),
     R6,
     XML,
     chk
